Altera código para capturar todos os elementos font dentro de um p, corrigindo pronunciamentos incompletos

--- a/code/pega-pronunciamentos-html.ipynb
+++ b/code/pega-pronunciamentos-html.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -41,6 +41,7 @@
     "import pandas as pd\n",
     "import pprint as pp\n",
     "import os\n",
+    "import re\n",
     "import requests\n",
     "import time\n",
     "from tqdm._tqdm_notebook import tqdm_notebook as tqdm"
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -124,10 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def make_soup(data):\n",
@@ -136,14 +135,21 @@
     "    Recebe uma string de texto e retorna um objeto do BeautifulSoup.\n",
     "    '''\n",
     "    \n",
+    "    # Preciso retirar as tags </b> do texto porque\n",
+    "    # o desenvolvedor da Câmara colocou elas fora\n",
+    "    # de ordem e isso faz o raspador enlouquecer.\n",
+    "    #                 ¯\\_(ツ)_/¯\n",
+    "    data = data.replace(\"<b>\",\"\").replace(\"</b>\",\"\")\n",
     "    soup = BeautifulSoup(data, 'html.parser')\n",
     "    return soup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def scrape_content_plen(soup):\n",
@@ -152,16 +158,23 @@
     "    Usa o BeautifulSoup para extrair o conteúdo da URL\n",
     "    em que está o discurso. Retorna uma string de texto.\n",
     "    '''\n",
-    "    \n",
+    "        \n",
     "    paragraph = soup.find( \"p\", attrs = {\"align\":\"justify\"} )\n",
-    "    paragraph = paragraph.text\n",
-    "    paragraph = paragraph.strip()\n",
-    "    return paragraph"
+    "    \n",
+    "    # Esse passo a mais é necessário porque, em alguns casos, há mais de uma tag 'font' dentro do 'p'.\n",
+    "    # Nessas ocasiões, não era retornado todo o texto, mas apenas o conteúdo da primeira tag\n",
+    "    fonts = paragraph.find_all(\"font\")\n",
+    "    \n",
+    "    text = [ font.text.strip() for font in fonts ]\n",
+    "    text = ' '.join(text)\n",
+    "\n",
+    "    \n",
+    "    return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -175,7 +188,7 @@
     "    '''\n",
     "    \n",
     "    fonts = soup.find_all(\"font\")\n",
-    "    fonts = [font.text.strip() for font in fonts]\n",
+    "    fonts = [ font.text.strip() for font in fonts ]\n",
     "    content = '\\n'.join(fonts)\n",
     "    \n",
     "    return content"
@@ -183,9 +196,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-71-0050b6271b13>, line 13)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-71-0050b6271b13>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    with open(fname, 'w+') as file:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "def save_txt(content, path, *args):\n",
     "    \n",
@@ -196,9 +218,9 @@
     "   \n",
     "    file_id = '-'.join(args)\n",
     "    file_id = file_id.replace(\"/\",\"\").replace(\".\",\"-\")\n",
-    "    fname = path + file_id\n",
+    "    fname = path + file_id + \".txt\"\n",
     "    \n",
-    "    if not os.path.isfile(fname):\n",
+    "#     if not os.path.isfile(fname):\n",
     "        with open(fname, 'w+') as file:\n",
     "            file.write(content)\n",
     "        \n",
@@ -207,21 +229,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "metadata": {
+    "code_folding": [],
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def download_pdf(args):\n",
+    "def download_pdf(url, date, path):\n",
     "    \n",
     "    '''\n",
     "    Função para baixar o pdf do documento\n",
     "    onde está registrado um pronunciamento.\n",
     "    '''\n",
     "    \n",
-    "    pass\n",
-    "    # TO DO"
+    "    r = requests.get(url)\n",
+    "    \n",
+    "    # TO DO - implementar captura de sessões conjuntas,\n",
+    "    # cujo link leva para um PDF viewer feioso\n",
+    "    \n",
+    "    # Pega redirecionamentos\n",
+    "    if r.history:    \n",
+    "        # Acessa a tag de redirecionamento e pega o contúdo\n",
+    "        r = requests.get(url)\n",
+    "        soup = make_soup(r.text)\n",
+    "        \n",
+    "       # Acha o link de redirecionamento\n",
+    "        meta = soup.find('meta',attrs={'http-equiv':'Refresh'})\n",
+    "        meta = str(meta)\n",
+    "        meta = re.search(\".*URL=(.*)\\\" http.*\", meta)\n",
+    "        \n",
+    "        # Se encontrado, refaz a solicitação\n",
+    "        if meta:\n",
+    "            url = meta.group(1)\n",
+    "            r =  requests.get(url)\n",
+    "            \n",
+    "            # Seleciona página da declaração para salvar no nome do arquivo\n",
+    "            page_no = re.search(\"page=(\\d+)\", url).group(1)\n",
+    "            fpath = \"{path}{date}-pg-{page_no}.pdf\"\n",
+    "            fpath = fpath.format(path = path, \n",
+    "                                 date = date, \n",
+    "                                 page_no = page_no)\n",
+    "    \n",
+    "            if not os.path.isfile(fpath):\n",
+    "                with open(fpath, 'wb') as f:\n",
+    "                    f.write(r.content)\n",
+    "    \n",
+    "    else:\n",
+    "        print(\"Couldn't download the following url:\\n\" + url)\n",
+    "    \n",
+    "    return"
    ]
   },
   {
@@ -233,8 +290,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def scrape_row_plen(row):\n",
@@ -254,7 +313,7 @@
     "        data = make_request(url)\n",
     "        soup = make_soup(data)\n",
     "        txt = scrape_content_plen(soup)\n",
-    "\n",
+    "        \n",
     "        path = \"../data/txts/plenario/\"\n",
     "        file_id = [row.Data, row.Hora, row.Fase, row.Sessão]\n",
     "        save_txt(txt, path, *file_id)\n",
@@ -262,8 +321,10 @@
     "        # time.sleep(.2)\n",
     "    \n",
     "    else:\n",
-    "        # TO DO: implementar funcionalidade\n",
-    "        download_pdf('put-path-here')\n",
+    "        url = row.Publicação\n",
+    "        path = \"../data/pdfs/plenario/\"\n",
+    "        date = row.Data.replace('/','-')\n",
+    "        # download_pdf(url, date, path)\n",
     "\n",
     "        return\n",
     "    "
@@ -271,8 +332,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def scrape_row_com(row):\n",
@@ -309,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -336,8 +399,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 69,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -347,13 +411,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8ed120ebf0a4c02bd7cf18df170b926",
+       "model_id": "b987ac038f8d432e82363ca403d4e65f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -371,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -382,36 +446,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ac097b0ac394052a70a852e19842a8f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "scrape_df(df_com)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "scrape_df(df_com)"
+   ]
   }
  ],
  "metadata": {
