now we do ' '.join(stuff) instead of '\n'.join(stuff)

--- a/code/pega-pronunciamentos-html.ipynb
+++ b/code/pega-pronunciamentos-html.ipynb
@@ -189,25 +189,18 @@
     "    \n",
     "    fonts = soup.find_all(\"font\")\n",
     "    fonts = [ font.text.strip() for font in fonts ]\n",
-    "    content = '\\n'.join(fonts)\n",
+    "    content = ' '.join(fonts)\n",
     "    \n",
     "    return content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-71-0050b6271b13>, line 13)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-71-0050b6271b13>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    with open(fname, 'w+') as file:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-     ]
-    }
-   ],
+   "execution_count": 77,
+   "metadata": {
+    "code_folding": []
+   },
+   "outputs": [],
    "source": [
     "def save_txt(content, path, *args):\n",
     "    \n",
@@ -221,8 +214,8 @@
     "    fname = path + file_id + \".txt\"\n",
     "    \n",
     "#     if not os.path.isfile(fname):\n",
-    "        with open(fname, 'w+') as file:\n",
-    "            file.write(content)\n",
+    "    with open(fname, 'w+') as file:\n",
+    "        file.write(content)\n",
     "        \n",
     "    return"
    ]
