--- a/code/formata-texto.ipynb
+++ b/code/formata-texto.ipynb
@@ -276,15 +276,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -377,6 +368,7 @@
     "    # Verifiquei manualmente e elas são de discursos\n",
     "    # que o site da Câmara retornou erroneamente.\n",
     "    # De fato não contém falas de Bolsonaro.\n",
+    "    \n",
     "    jb_plen = jb_plen[ jb_plen.FULL_CLEAN_QUOTE != \"\" ]\n",
     "#     jb_com  = jb_com[ jb_com.FULL_CLEAN_QUOTE != \"\" ]\n",
     "    \n",
@@ -389,8 +381,10 @@
     "    \n",
     "    fname = directory + \"discursos_jair_bolsonaro.csv\" \n",
     "    jb_plen.to_csv(fname, index = False)\n",
+    "#    jb.to_csv(fname, index = False)\n",
     "    \n",
-    "    return jb_plen"
+    "    return jb_plen\n",
+    "#    return jb"
    ]
   },
   {
